--- a/index.css
+++ b/index.css
@@ -7,6 +7,18 @@ body {
     background-color: #ffffff;
 }
 
+.wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.icon {
+    display: flex;
+    justify-content: end;
+    width: 100px;
+}
+
 .logo {
     width: 15vw;
 }
